--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: TestePlotSquared
 version: '1.0'
-main: ovinola.com.github.testePlotSquared.TestePlotSquared
+main: ovinola.com.github.testePlotSquared.PlotManager
 api-version: '1.8.8'
 commands:
     plot:
